@@ -2,14 +2,11 @@ package org.folio.aes.util;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
-import java.net.URLEncoder;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-
 import com.jayway.jsonpath.Configuration;
 import com.jayway.jsonpath.JsonPath;
 import com.jayway.jsonpath.Option;
+import java.net.URLEncoder;
+import java.util.List;
 
 public class AesConstants {
 
@@ -23,8 +20,9 @@ public class AesConstants {
   public static final String CONFIG_VALUE = "value";
   public static final String CONFIG_QUERY_CQL =
       URLEncoder.encode("(module=AES and configName=routing_rules)", UTF_8);
-  public static final String CONFIG_ROUTING_QUERY = String
-    .format("/configurations/entries?query=%s&limit=%d", CONFIG_QUERY_CQL, Integer.MAX_VALUE);
+  public static final String CONFIG_ROUTING_QUERY =
+      String.format("/configurations/entries?query=%s&limit=%d",
+          CONFIG_QUERY_CQL, Integer.MAX_VALUE);
   public static final String CONFIG_ROUTING_CRITERIA = "criteria";
   public static final String CONFIG_ROUTING_TARGET = "target";
 
@@ -51,17 +49,17 @@ public class AesConstants {
 
   // message password masking
   @SuppressWarnings({"squid:S2068"})
-  public static final List<String> MSG_PW = Collections.unmodifiableList(Arrays.asList("password", "newPassword"));
+  public static final List<String> MSG_PW = List.of("password", "newPassword");
   public static final String MSG_PW_MASK = "xxx";
 
   public static final Configuration PII_JSON_PATH_CONFIG = Configuration
-    .defaultConfiguration()
-    .addOptions(Option.AS_PATH_LIST, Option.SUPPRESS_EXCEPTIONS);
+      .defaultConfiguration()
+      .addOptions(Option.AS_PATH_LIST, Option.SUPPRESS_EXCEPTIONS);
 
   // list of JSON paths that contain personal info
-  public static final List<JsonPath> PII_JSON_PATHS = Collections.unmodifiableList(Arrays.asList(
-    JsonPath.compile("$..personal"),
-    JsonPath.compile("$..username"),
-    JsonPath.compile("$..requester"),
-    JsonPath.compile("$..user")));
+  public static final List<JsonPath> PII_JSON_PATHS = List.of(
+      JsonPath.compile("$..personal"),
+      JsonPath.compile("$..username"),
+      JsonPath.compile("$..requester"),
+      JsonPath.compile("$..user"));
 }
